2014-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* FaceSelection.h:
	* FaceSelection.cpp:
	* X3DBrowserEditor.cpp:
	* TextureCoordinateEditor.xml:
	* ColorPerVertexEditor.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* X3DObjectOperations.cpp:
	* ColorPerVertexEditor.h:
	* ColorPerVertexEditor.cpp:
	* TextureCoordinateEditorLeftPreview.x3dv:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* FaceSelection.h:
	* FaceSelection.cpp:
	* TextureCoordinateEditor.xml:
	* X3DTextureCoordinateEditorInterface.h:
	* X3DTextureCoordinateEditorInterface.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DTextureCoordinateEditorInterface.h:
	* X3DTextureCoordinateEditorInterface.cpp: 

2014-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.xml:
	* TextureCoordinateEditor.xml:
	* TextureCoordinateEditorLeftPreview.x3dv:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditorRightPreview.x3dv:
	* TextureCoordinateEditor.cpp: 

2014-11-19  Holger Seelig  <holger.seelig@yahoo.de>

	* FaceSelection.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-19  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-17  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.cpp: 

2014-11-17  Holger Seelig  <holger.seelig@yahoo.de>

	* FaceSelection.h:
	* ColorPerVertexEditor.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-17  Holger Seelig  <holger.seelig@yahoo.de>

	* FaceSelection.h:
	* FaceSelection.cpp: 

2014-11-17  Holger Seelig  <holger.seelig@yahoo.de>

	* FaceSelection.h:
	* FaceSelection.cpp:
	* ColorPerVertexEditor.cpp:
	* TextureCoordinateEditor.cpp: 
