@@ -68,6 +68,13 @@ X3DTextureCoordinateEditorInterface::create (const std::string & filename)
 	m_builder -> get_widget ("Widget", m_Widget);
 	m_builder -> get_widget ("UndoMenuItem", m_UndoMenuItem);
 	m_builder -> get_widget ("RedoMenuItem", m_RedoMenuItem);
+	m_builder -> get_widget ("MappingsMenuItem", m_MappingsMenuItem);
+	m_builder -> get_widget ("XPlaneMenuItem", m_XPlaneMenuItem);
+	m_builder -> get_widget ("YPlaneMenuItem", m_YPlaneMenuItem);
+	m_builder -> get_widget ("ZPlaneMenuItem", m_ZPlaneMenuItem);
+	m_builder -> get_widget ("BoxMenuItem", m_BoxMenuItem);
+	m_builder -> get_widget ("CylinderMenuItem", m_CylinderMenuItem);
+	m_builder -> get_widget ("SphereMenuItem", m_SphereMenuItem);
 	m_builder -> get_widget ("SelectionMenuItem", m_SelectionMenuItem);
 	m_builder -> get_widget ("SelectAllMenuItem", m_SelectAllMenuItem);
 	m_builder -> get_widget ("DeselectAllMenuItem", m_DeselectAllMenuItem);
@@ -93,6 +100,16 @@ X3DTextureCoordinateEditorInterface::create (const std::string & filename)
 	// Connect object Gtk::ImageMenuItem with id 'UndoMenuItem'.
 	m_UndoMenuItem -> signal_activate () .connect (sigc::mem_fun (*this, &X3DTextureCoordinateEditorInterface::on_undo_activate));
 	m_RedoMenuItem -> signal_activate () .connect (sigc::mem_fun (*this, &X3DTextureCoordinateEditorInterface::on_redo_activate));
+
+	// Connect object Gtk::MenuItem with id 'XPlaneMenuItem'.
+	m_XPlaneMenuItem -> signal_activate () .connect (sigc::mem_fun (*this, &X3DTextureCoordinateEditorInterface::on_x_plane_activate));
+	m_YPlaneMenuItem -> signal_activate () .connect (sigc::mem_fun (*this, &X3DTextureCoordinateEditorInterface::on_y_plane_activate));
+	m_ZPlaneMenuItem -> signal_activate () .connect (sigc::mem_fun (*this, &X3DTextureCoordinateEditorInterface::on_z_plane_activate));
+	m_BoxMenuItem -> signal_activate () .connect (sigc::mem_fun (*this, &X3DTextureCoordinateEditorInterface::on_box_activate));
+	m_CylinderMenuItem -> signal_activate () .connect (sigc::mem_fun (*this, &X3DTextureCoordinateEditorInterface::on_cylinder_activate));
+	m_SphereMenuItem -> signal_activate () .connect (sigc::mem_fun (*this, &X3DTextureCoordinateEditorInterface::on_sphere_activate));
+
+	// Connect object Gtk::ImageMenuItem with id 'SelectAllMenuItem'.
 	m_SelectAllMenuItem -> signal_activate () .connect (sigc::mem_fun (*this, &X3DTextureCoordinateEditorInterface::on_select_all_activate));
 
 	// Connect object Gtk::MenuItem with id 'DeselectAllMenuItem'.
