@@ -1,5 +1,10 @@
 2014-11-20  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DTextureCoordinateEditorInterface.h:
+	* X3DTextureCoordinateEditorInterface.cpp: 
+
+2014-11-20  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* FaceSelection.h:
 	* FaceSelection.cpp:
 	* X3DBrowserEditor.cpp:
